@@ -119,11 +119,11 @@ public:
 
 	/* Implementation of AddressDataBus: */
 	virtual void AddressSelect(uint64_t address);
-	virtual bool ReadData(uint8_t& data);
+	virtual bool ReadData(uint8_t& data, Endianness endianness);
 	virtual bool ReadData(uint16_t& data, Endianness endianness);
 	virtual bool ReadData(uint32_t& data, Endianness endianness);
 	virtual bool ReadData(uint64_t& data, Endianness endianness);
-	virtual bool WriteData(const uint8_t& data);
+	virtual bool WriteData(const uint8_t& data, Endianness endianness);
 	virtual bool WriteData(const uint16_t& data, Endianness endianness);
 	virtual bool WriteData(const uint32_t& data, Endianness endianness);
 	virtual bool WriteData(const uint64_t& data, Endianness endianness);
@@ -222,7 +222,7 @@ private:
 						uint8_t b = c1*16 + c2;
 						
 						m_ram.AddressSelect(i + addr);
-						m_ram.WriteData(b);
+						m_ram.WriteData(b, BigEndian);
 					}
 				} else {
 					std::cerr << "deserialize ram: internal error\n";
